Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.

~~~~~~~~~~~~0.0.1 Revitalize 10-26-2022 xx.xx P.M~~~~~~~~~~~~~~
+Created PoweredMachine.cs which is the base for all machines that consume fuel as well as consolidate the common logic there so that it's not scattered across all of the classes again.
+Created new PoweredMachineTier Coal tier which uses coal to operate as an early game solution for some machines.
+Added more display strings for ElectricMiningDrill
~Replaced error strings file for ElectricFurnace with machine common error strings.
~Added ability to distinguish if fuel must be an active object or not to be consumed.
+Added small easter egg when placing mining drills on wooden floors.


~~~~~~~~~~~~0.0.1 Revitalize 10-24-2022 xx.xx P.M~~~~~~~~~~~~~~
+Started work on the Mining Drill.

~~~~~~~~~~~~0.0.1 Revitalize 10-18-2022 xx.xx P.M~~~~~~~~~~~~~~
~Cleaned up some code in DwarfShopUtilities to make it more clear on how resource bushes are sold.
+Added Coal, Copper, Iron, Gold, Iridium, and Radioactive resource bushes to Qi's Walnut room.
+Added config file for Qi's Walnut room sell prices including for existing nuclear and magical furnace blueprints.

~~~~~~~~~~~~0.0.1 Revitalize 10-17-2022 xx.xx P.M~~~~~~~~~~~~~~
~ Slightly reduced the default chance of resource bushes being sold by the Dwarf.
+ Added the ability for resource bush chances being sold by the Dwarf to a config file.
~ Changed it so that the Player must have obtained the Skull Cavern Key before any resource bush will be sold by the Dwarf.

~~~~~~~~~~~~0.0.1 Revitalize 10-14-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added silo refill item to Hay Maker Shop.
+Added silo refill item to Marnie's shop.
  +Also added in mail to let the player know when this is available.
-Removed selling the HayMaker from Marnie's shop
+Added the Hay Feed Shop item to Marnie's shop when a teir two barn or coop is built.